; ModuleID = '/home/carl/AnghaBench/h2o/deps/mruby/src/extr_variable.c_assign_class_name.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/mruby/src/extr_variable.c_assign_class_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.RClass* }
%struct.RClass = type { i32 }
%struct.RObject = type { i32 }

@.str = private unnamed_addr constant [14 x i8] c"__classname__\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"__outer__\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, %struct.RObject*, i32, i32)* @assign_class_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assign_class_name(%struct.TYPE_7__* %0, %struct.RObject* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.RObject*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.RObject*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.RObject* %1, %struct.RObject** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = load %struct.RObject*, %struct.RObject** %6, align 8
  %14 = getelementptr inbounds %struct.RObject, %struct.RObject* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @namespace_p(i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %82

18:                                               ; preds = %4
  %19 = load i32, i32* %8, align 4
  %20 = call i32 @mrb_type(i32 %19)
  %21 = call i64 @namespace_p(i32 %20)
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %82

23:                                               ; preds = %18
  %24 = load i32, i32* %8, align 4
  %25 = call %struct.RObject* @mrb_obj_ptr(i32 %24)
  store %struct.RObject* %25, %struct.RObject** %9, align 8
  %26 = load %struct.RObject*, %struct.RObject** %6, align 8
  %27 = load %struct.RObject*, %struct.RObject** %9, align 8
  %28 = icmp ne %struct.RObject* %26, %27
  br i1 %28, label %29, label %81

29:                                               ; preds = %23
  %30 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %31 = load i32, i32* %7, align 4
  %32 = call i32* @mrb_sym2name(%struct.TYPE_7__* %30, i32 %31)
  %33 = getelementptr inbounds i32, i32* %32, i64 0
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @ISUPPER(i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %81

37:                                               ; preds = %29
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %39 = call i32 @mrb_intern_lit(%struct.TYPE_7__* %38, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %39, i32* %10, align 4
  %40 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %41 = load %struct.RObject*, %struct.RObject** %9, align 8
  %42 = load i32, i32* %10, align 4
  %43 = call i32 @mrb_obj_iv_get(%struct.TYPE_7__* %40, %struct.RObject* %41, i32 %42)
  store i32 %43, i32* %11, align 4
  %44 = load i32, i32* %11, align 4
  %45 = call i64 @mrb_nil_p(i32 %44)
  %46 = icmp ne i64 %45, 0
  br i1 %46, label %47, label %80

47:                                               ; preds = %37
  %48 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %49 = call i32 @mrb_intern_lit(%struct.TYPE_7__* %48, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  store i32 %49, i32* %12, align 4
  %50 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %51 = load %struct.RObject*, %struct.RObject** %9, align 8
  %52 = load i32, i32* %12, align 4
  %53 = call i32 @mrb_obj_iv_get(%struct.TYPE_7__* %50, %struct.RObject* %51, i32 %52)
  store i32 %53, i32* %11, align 4
  %54 = load i32, i32* %11, align 4
  %55 = call i64 @mrb_nil_p(i32 %54)
  %56 = icmp ne i64 %55, 0
  br i1 %56, label %57, label %79

57:                                               ; preds = %47
  %58 = load %struct.RObject*, %struct.RObject** %6, align 8
  %59 = bitcast %struct.RObject* %58 to %struct.RClass*
  %60 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %61 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %60, i32 0, i32 0
  %62 = load %struct.RClass*, %struct.RClass** %61, align 8
  %63 = icmp eq %struct.RClass* %59, %62
  br i1 %63, label %64, label %71

64:                                               ; preds = %57
  %65 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %66 = load %struct.RObject*, %struct.RObject** %9, align 8
  %67 = load i32, i32* %10, align 4
  %68 = load i32, i32* %7, align 4
  %69 = call i32 @mrb_symbol_value(i32 %68)
  %70 = call i32 @mrb_obj_iv_set(%struct.TYPE_7__* %65, %struct.RObject* %66, i32 %67, i32 %69)
  br label %78

71:                                               ; preds = %57
  %72 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %73 = load %struct.RObject*, %struct.RObject** %9, align 8
  %74 = load i32, i32* %12, align 4
  %75 = load %struct.RObject*, %struct.RObject** %6, align 8
  %76 = call i32 @mrb_obj_value(%struct.RObject* %75)
  %77 = call i32 @mrb_obj_iv_set(%struct.TYPE_7__* %72, %struct.RObject* %73, i32 %74, i32 %76)
  br label %78

78:                                               ; preds = %71, %64
  br label %79

79:                                               ; preds = %78, %47
  br label %80

80:                                               ; preds = %79, %37
  br label %81

81:                                               ; preds = %80, %29, %23
  br label %82

82:                                               ; preds = %81, %18, %4
  ret void
}

declare dso_local i64 @namespace_p(i32) #1

declare dso_local i32 @mrb_type(i32) #1

declare dso_local %struct.RObject* @mrb_obj_ptr(i32) #1

declare dso_local i64 @ISUPPER(i32) #1

declare dso_local i32* @mrb_sym2name(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @mrb_intern_lit(%struct.TYPE_7__*, i8*) #1

declare dso_local i32 @mrb_obj_iv_get(%struct.TYPE_7__*, %struct.RObject*, i32) #1

declare dso_local i64 @mrb_nil_p(i32) #1

declare dso_local i32 @mrb_obj_iv_set(%struct.TYPE_7__*, %struct.RObject*, i32, i32) #1

declare dso_local i32 @mrb_symbol_value(i32) #1

declare dso_local i32 @mrb_obj_value(%struct.RObject*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
